--- a/wrn-api/Gemfile
+++ b/wrn-api/Gemfile
@@ -24,13 +24,13 @@ gem 'jbuilder', '~> 2.0'
 gem 'sdoc', '~> 0.4.0', group: :doc
 
 # Use device for auth
-gem 'devise'
+# gem 'devise'
 
 # Use rack cors to provide support for Cross-Origin Resource Sharing (CORS)
 gem 'rack-cors', :require => 'rack/cors'
 
 # Use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
+gem 'bcrypt', '~> 3.1.7'
 
 # Use Unicorn as the app server
 # gem 'unicorn'
