--- a/wrn-angular/bower.json
+++ b/wrn-angular/bower.json
@@ -13,7 +13,8 @@
     "jquery-ui": "~1.11.4",
     "angular-local-storage": "~0.2.2",
     "ngquill": "~1.0.12",
-    "angular-fullscreen": "~1.0.1"
+    "angular-fullscreen": "~1.0.1",
+    "angular-chart.js": "~0.7.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
